--- a/views/home.erb
+++ b/views/home.erb
@@ -1,2 +1,5 @@
+
 <h1>Welcome</h1>
 <h2>Click <a href = '/play'>play</a> to have a go</h2>
+
+<img src='http://advisoranalyst.com/glablog/wp-content/uploads/2014/05/thumb_6917_rockpaperscissors.jpg'>
