--- a/views/play.erb
+++ b/views/play.erb
@@ -1,1 +1,6 @@
-<h3>Type two hands in the url to start</h3>
+
+<h2>Type two objects in the url to start</h2>
+<h2>Choose two from:</h2>
+<img src='https://phosphorusfive.files.wordpress.com/2017/08/rock.png'>
+<img src='http://en.thenavigatorcompany.com/bundles/stepvalueportucel/images/institucional/infografia/paper-leaf.png'>
+<img src='https://cdn.pixabay.com/photo/2016/03/31/23/11/scissors-1297454_960_720.png'>
