--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Rock, paper, scissors!</title>
+    <link rel='stylesheet' href='/style.css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:700|PT+Serif" rel="stylesheet">
   </head>
   <body>
     <nav>
@@ -12,6 +14,8 @@
         <li><a href='/play'>Play</a></li>
       </ol>
     </nav>
-    <%= yield %>
+    <section class="main">
+      <%= yield %>
+    </section>
   </body>
 </html>
