fixed broken link

--- a/views/play.erb
+++ b/views/play.erb
@@ -3,4 +3,4 @@
 <h2>Choose two from:</h2>
 <img src='https://phosphorusfive.files.wordpress.com/2017/08/rock.png'>
 <img src='http://en.thenavigatorcompany.com/bundles/stepvalueportucel/images/institucional/infografia/paper-leaf.png'>
-<img src='https://cdn.pixabay.com/photo/2016/03/31/23/11/scissors-1297454_960_720.png'>
+<img src='http://dreams.metroeve.com/wp-content/uploads/2017/02/dreams.metroeve_scissors-dreams-meaning.png'>
