--- a/public/style.css
+++ b/public/style.css
@@ -23,7 +23,7 @@ nav {
   width: 100%
 }
 
-nav ol{
+nav ol {
   padding: 0;
   display: inline-flex;
   list-style-type: none;
@@ -31,8 +31,8 @@ nav ol{
 }
 
 a {
-  color: rgb(1, 5, 111);
-    text-decoration: none
+    text-decoration: none;
+    color: rgb(0, 17, 168)
 }
 
 nav li a {
